WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52814
REGRESSION(
r76177
): All JavaScriptCore tests fail on ARM
https://bugs.webkit.org/show_bug.cgi?id=52814
Summary
REGRESSION(r76177): All JavaScriptCore tests fail on ARM
Csaba Osztrogonác
Reported
2011-01-20 07:26:22 PST
http://trac.webkit.org/changeset/76177
made all jsc tests fail on ARM Gabor or Zoltan, could you check it, please?
Attachments
proposed fix
(1.40 KB, patch)
2011-01-21 11:37 PST
,
Peter Gal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Gal
Comment 1
2011-01-21 11:37:50 PST
Created
attachment 79767
[details]
proposed fix I'm not an OwnPtr expert, but shouldn't we need to get the approximateByteSize before releasing the OwnPtr? Tested on an ARM build, with run-sunspider and run-javascriptcore-tests all runs ok.
Darin Adler
Comment 2
2011-01-21 11:45:47 PST
Comment on
attachment 79767
[details]
proposed fix Perfect. Great fix. This depends on the compiler’s order of evaluation for arguments, so could behave differently for different compilers.
WebKit Commit Bot
Comment 3
2011-01-21 12:01:19 PST
Comment on
attachment 79767
[details]
proposed fix Clearing flags on attachment: 79767 Committed
r76376
: <
http://trac.webkit.org/changeset/76376
>
WebKit Commit Bot
Comment 4
2011-01-21 12:01:24 PST
All reviewed patches have been landed. Closing bug.
Antti Koivisto
Comment 5
2011-01-22 03:25:22 PST
Good catch. Thanks for fixing this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug