2011-01-21  Peter Gal  <galpeter@inf.u-szeged.hu>

Reviewed by Darin Adler.

        REGRESSION(r76177): All JavaScriptCore tests fail on ARM
        https://bugs.webkit.org/show_bug.cgi?id=52814

        Get the approximateByteSize value before releasing the OwnPtr.

        * parser/JSParser.cpp:
        (JSC::JSParser::parseFunctionInfo):

git-svn-id: svn://svn.chromium.org/blink/trunk@76376 bbb929c8-8fbe-4397-9dbb-9b2b20218538