third_party/WebKit/Source/JavaScriptCore/parser/JSParser.cpp
@@ -1358,8 +1358,10 @@ template <JSParser::FunctionRequirements requirements, bool nameIsInContainingSc
     failIfFalse(popScope(functionScope, TreeBuilder::NeedsFreeVariableInfo));
     matchOrFail(CLOSEBRACE);
 
-    if (newInfo)
-        m_functionCache->add(openBracePos, newInfo.release(), newInfo->approximateByteSize());
+    if (newInfo) {
+        unsigned approximateByteSize = newInfo->approximateByteSize();
+        m_functionCache->add(openBracePos, newInfo.release(), approximateByteSize);
+    }
 
     next();
     return true;
